# Sem3-Combinatorics

./: CMakeLists.txt  README.md  main.c
GTC/array_functions/: array_functions.c  array_functions.h
GTC/permutation/: permutation.c  permutation.h
GTC/utility_functions/: utility_functions.c  utility_functions.h
